# compta-lmnp

./: .env.example  .gitignore  Makefile  PRD.md  PROGRESS.md  README.md  docker-compose.yml  lmnp.ini
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: assistant.py  depreciation.py  expenses.py  fiscal.py  properties.py  revenues.py
backend/app/core/: accounting.py  cerfa_generator.py  comparator.py  depreciation.py  validator.py
backend/app/db/: database.py  seed.py
backend/app/models/: __init__.py  depreciation.py  expense.py  fiscal_year.py  property.py  revenue.py
backend/app/utils/: fiscal_loader.py  pdf_generator.py  xml_generator.py
backend/tests/: conftest.py  test_accounting.py  test_api.py  test_cerfa.py  test_comparator.py  test_depreciation.py
backend/tests/fixtures/: sample_dataset.json
fiscal_constants/: 2025.yaml  2026.yaml
frontend/: Dockerfile  index.html  nginx.frontend.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  Tooltip.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Assistant.tsx  Dashboard.tsx  Depreciation.tsx  Expenses.tsx  ExportPage.tsx  FiscalSummary.tsx  Properties.tsx  Revenues.tsx  Wizard.tsx
frontend/src/store/: index.ts
frontend/tests/unit/: api.test.ts
nginx/: nginx.conf
